@@ -43,7 +43,7 @@ fl_read_image(uchar *p,		// I - Pixel buffer or NULL to allocate
 	      int   alpha) {	// I - Alpha value for image (0 for none)
   Rect		src,		// Source rectangle
 		dst;		// Destination rectangle
-  Fl_Offscreen	osbuffer;	// Temporary off-screen buffer for copy
+  GWorldPtr	osbuffer;	// Temporary off-screen buffer for copy
   GrafPtr	srcPort;	// Source port
   RGBColor	rgb;		// RGB colors for copy mask...
   PixMapHandle	pm;		// Pixmap handle for off-screen buffer
@@ -53,12 +53,6 @@ fl_read_image(uchar *p,		// I - Pixel buffer or NULL to allocate
   int           idx, idy;	// Current X & Y in image
   int		d;		// Depth of image
   int		rowBytes;	// Number of bytes per row...
-
-
-  // Get an off-screen buffer for copying the image...
-  osbuffer = fl_create_offscreen(w,h);
-
-  if (!osbuffer) return 0;
 
   // Set the source and destination rectangles...
   src.top    = y;
@@ -70,6 +64,14 @@ fl_read_image(uchar *p,		// I - Pixel buffer or NULL to allocate
   dst.left   = 0;
   dst.bottom = h;
   dst.right  = w;
+
+  // Get an off-screen buffer for copying the image...
+  QDErr err = NewGWorld(&osbuffer, 0, &dst, 0L, 0L, 0);
+  if (!osbuffer) return 0;
+  if (err!=noErr) {
+    DisposeGWorld(osbuffer);
+    return 0;
+  }
 
   // Get the source port...
   GetPort(&srcPort);
@@ -121,10 +123,9 @@ fl_read_image(uchar *p,		// I - Pixel buffer or NULL to allocate
       pdst[2] = psrc[2];
     }
 #endif // __i386__
-     
   // Unlock and delete the off-screen buffer, then return...
   UnlockPixels(pm);
-  fl_delete_offscreen(osbuffer);
+  DisposeGWorld(osbuffer);
 
   SetPort(srcPort);
   return p;
